{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 99,
  "lineage": "cdbe6840-886c-7927-c89f-11b1acca0c7d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:subnet/subnet-f502ec93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-f502ec93",
            "map_public_ip_on_launch": true,
            "owner_id": "505353972116",
            "state": "available",
            "vpc_id": "vpc-33757054"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:subnet/subnet-80716fc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-80716fc9",
            "map_public_ip_on_launch": true,
            "owner_id": "505353972116",
            "state": "available",
            "vpc_id": "vpc-33757054"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:subnet/subnet-01923758",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-01923758",
            "map_public_ip_on_launch": true,
            "owner_id": "505353972116",
            "state": "available",
            "vpc_id": "vpc-33757054"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:vpc/vpc-33757054",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-6dbb140b",
            "default_route_table_id": "rtb-d7860fb1",
            "default_security_group_id": "sg-2aae2f56",
            "dhcp_options_id": "dopt-bf2b17d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-33757054",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-d7860fb1",
            "owner_id": "505353972116"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ce5f60a39f1790e",
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:instance/i-0487258b742d206ad",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "aho-host",
            "id": "i-0487258b742d206ad",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "aho-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-092dda493fe004e7e",
            "private_dns": "ip-172-31-26-106.ap-southeast-1.compute.internal",
            "private_ip": "172.31.26.106",
            "public_dns": "ec2-13-229-233-173.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.233.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-05405ebfe31074f30",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "aho-common",
              "aho-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f502ec93",
            "tags": {
              "Name": "aho-control_plane-1",
              "kubernetes.io/cluster/aho": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00683e1eaf1cf5b8c",
              "sg-085bec9089bb9d325"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ce5f60a39f1790e",
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:instance/i-0a6cdfefb280c3c1b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "aho-host",
            "id": "i-0a6cdfefb280c3c1b",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "aho-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-07f08d7f2a4e4bdbf",
            "private_dns": "ip-172-31-32-67.ap-southeast-1.compute.internal",
            "private_ip": "172.31.32.67",
            "public_dns": "ec2-54-254-202-34.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.202.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0195d36f4a0952f68",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "aho-common",
              "aho-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-80716fc9",
            "tags": {
              "Name": "aho-control_plane-2",
              "kubernetes.io/cluster/aho": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00683e1eaf1cf5b8c",
              "sg-085bec9089bb9d325"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ce5f60a39f1790e",
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:instance/i-08e90ea5547e7c625",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "aho-host",
            "id": "i-08e90ea5547e7c625",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "aho-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-08d353e6ff1d4eee4",
            "private_dns": "ip-172-31-14-105.ap-southeast-1.compute.internal",
            "private_ip": "172.31.14.105",
            "public_dns": "ec2-18-141-4-94.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.4.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0a3d6bab023ea5f4a",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "aho-common",
              "aho-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01923758",
            "tags": {
              "Name": "aho-control_plane-3",
              "kubernetes.io/cluster/aho": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00683e1eaf1cf5b8c",
              "sg-085bec9089bb9d325"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:loadbalancer/net/aho-api-lb/f5f5825ce8bf83cd",
            "arn_suffix": "net/aho-api-lb/f5f5825ce8bf83cd",
            "dns_name": "aho-api-lb-f5f5825ce8bf83cd.elb.ap-southeast-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:loadbalancer/net/aho-api-lb/f5f5825ce8bf83cd",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "aho-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01923758"
              },
              {
                "subnet_id": "subnet-80716fc9"
              },
              {
                "subnet_id": "subnet-f502ec93"
              }
            ],
            "subnets": [
              "subnet-01923758",
              "subnet-80716fc9",
              "subnet-f502ec93"
            ],
            "tags": {
              "Cluster": "aho",
              "kubernetes.io/cluster/aho": "shared"
            },
            "vpc_id": "vpc-33757054",
            "zone_id": "ZKVM4W9LS7TM"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:listener/net/aho-api-lb/f5f5825ce8bf83cd/a39aaa7524465e57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/aho-api/28a6ce13565bc97d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:listener/net/aho-api-lb/f5f5825ce8bf83cd/a39aaa7524465e57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:loadbalancer/net/aho-api-lb/f5f5825ce8bf83cd",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/aho-api/28a6ce13565bc97d",
            "arn_suffix": "targetgroup/aho-api/28a6ce13565bc97d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/aho-api/28a6ce13565bc97d",
            "lambda_multi_value_headers_enabled": false,
            "name": "aho-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-33757054"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/aho-api/28a6ce13565bc97d-20200215155151623700000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/aho-api/28a6ce13565bc97d",
            "target_id": "i-0487258b742d206ad"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/aho-api/28a6ce13565bc97d-20200215155151566500000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/aho-api/28a6ce13565bc97d",
            "target_id": "i-0a6cdfefb280c3c1b"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/aho-api/28a6ce13565bc97d-20200215155151558300000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/aho-api/28a6ce13565bc97d",
            "target_id": "i-08e90ea5547e7c625"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:security-group/sg-085bec9089bb9d325",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085bec9089bb9d325",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "aho-common",
            "name_prefix": null,
            "owner_id": "505353972116",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/aho": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-33757054"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:security-group/sg-00683e1eaf1cf5b8c",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-00683e1eaf1cf5b8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "aho-control_planes",
            "name_prefix": null,
            "owner_id": "505353972116",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/aho": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-33757054"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}